# ios_pointer_finder

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-WEIGHTS  README.md  _run_v07.sh  _run_v071_sweep.sh  bump.sh  capture_backgrounds.py  cli.py  click_at.py  decode.py  eval_v03.py  extract_sprite.py  grid_overlay.py  inference.py  keep_picker.html  keep_picker.py  pyproject.toml  synthesize.py  test_real.py  test_real_bbox.py  train.py  train_continuous.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DATASET.md  MODEL_CARD.md
scripts/: convert_pt_to_safetensors.py  export_coreml.py  export_onnx.py
tests/: conftest.py  test_cli.py  test_inference.py  test_model.py  test_parabolic.py  test_real_frame_eval.py  test_synth_visual.py  test_synthesize.py  verify_v05_fixes.py
tests/baselines/: decoder_preflight.json  v07_decoder_baseline.json
tests/fixtures/real/: ground_truth.json
